gl31-master/src/test/deca/syntax/invalid/sansobjet/while_unclosed_condition.deca
// Description:
//    tests de programme incorrect syntaxiquement pour sans-objet
//
// Resultats:
//    Ligne 12 : Erreur, ')' manquant
//
// Historique:
//    cree le 18/01/2021
{
    boolean b;

    while(b == true{
        print(b);
    }
}
